Fix navigation bar overlapes heading

--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ h1, h2, h3, h4, h5 {
 	border-bottom: 5px solid #86b654;
 }
 
+/* Fix the anchor relative position because of the navigraiton */
+.anchor {
+	display: block;
+	position: relative;
+	top: -61px;
+	visibility: hidden;
+}
+
 #home {
 	background: url(pb/lake.jpg) no-repeat center center fixed;
 	display: table;
